[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Menus/Menu.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 377.0
margin_top = 40.0
margin_right = 903.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 263, 0 )
color = Color( 0.254902, 0.356863, 0.192157, 1 )

[node name="Titulo" type="Label" parent="ColorRect"]
margin_left = 230.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 38, 0 )
text = "Luz de Jaci"
align = 1
valign = 1

[node name="Novo" type="Button" parent="."]
margin_left = 564.0
margin_top = 300.0
margin_right = 716.0
margin_bottom = 334.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 76, 0 )
text = "Novo Jogo"

[node name="Configuracoes" type="Button" parent="."]
margin_left = 564.0
margin_top = 400.0
margin_right = 716.0
margin_bottom = 434.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 76, 0 )
text = "Configurações"

[node name="Sair" type="Button" parent="."]
margin_left = 564.0
margin_top = 500.0
margin_right = 716.0
margin_bottom = 534.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 76, 0 )
text = "Sair do Jogo"

[connection signal="pressed" from="Novo" to="." method="_on_Novo_pressed"]
[connection signal="pressed" from="Configuracoes" to="." method="_on_Configuracoes_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
